# zero-to-production

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
docker/local/: Dockerfile  docker-compose.yaml  entrypoint.sh
migrations/: 20230602232148_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subsribtions.rs
tests/: health_check.rs
