[package]
name = "ztp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.70"
envconfig= "0.10.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = {version = "1.0.163", features = ["derive"]}
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.11.18"
